--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -7,51 +7,52 @@ repo_name: GitHub
 edit_uri: edit/main/docs/
 
 nav:
+- Docs:
   - Home: index.md
   - EDCA Overview:
-    - Architecture: architecture.md
-    - Data schema: data-schema/index.md
+    - Architecture: EDCA Overview/architecture.md
+    - Data schema: EDCA Overview/data-schema/index.md
     - Inputs:
-      - Control file: control-file.md
-      - Source data: source-data.md
-      - Canonical data: canonical-data.md
-      - Data representation:
-        - CSVs: csvs.md
-        - Parquets: parquets.md
-        - Pydantic: pydantic.md
+      - Control file: Inputs/control-file.md
+      - Source data: Inputs/source-data.md
+      - Canonical data: Inputs/canonical-data.md
+      - Data Representation:
+        - CSVs: EDCA Overview/Inputs/Data Representation/csvs.md
+        - Parquets: EDCA Overview/Inputs/Data Representation/parquets.md
+        - Pydantic: EDCA Overview/Inputs/Data Representation/pydantic.md
     - Implementation:
-      - Core modules:
-        - Parsing: core-modules/parse.md
-        - Load Combinations: core-modules/loads.md
-        - Span Sweeps: core-modules/spans.md
-        - System Types and Typologies: core-modules/systems.md
-        - Material Takeoffs: core-modules/takeoff.md
-        - Carbon Calculations: core-modules/carbon.md
-        - Material Rankings: core-modules/rank.md
-        - Reporting: core-modules/reporting.md
-      - Code checks:
-        - Code loader: code-checks/code-loader.md
-        - Eurocode Checks: code-checks/eurocode-checks.md
-        - ASCE Checks: code-checks/asce-checks.md
-      - Testing: testing.md
+      - Core Modules:
+        - Parsing: EDCA Overview/Implementation/Core Modules/parse.md
+        - Load Combinations: EDCA Overview/Implementation/Core Modules/loads.md
+        - Span Sweeps: EDCA Overview/Implementation/Core Modules/spans.md
+        - System Types and Typologies: EDCA Overview/Implementation/Core Modules/systems.md
+        - Material Takeoffs: EDCA Overview/Implementation/Core Modules/takeoff.md
+        - Carbon Calculations: EDCA Overview/Implementation/Core Modules/carbon.md
+        - Material Rankings: EDCA Overview/Implementation/Core Modules/rank.md
+        - Reporting: EDCA Overview/Implementation/Core Modules/reporting.md
+      - Code Checks:
+        - Code loader: EDCA Overview/Implementation/Code Checks/code-loader.md
+        - Eurocode Checks: EDCA Overview/Implementation/Code Checks/eurocode-checks.md
+        - ASCE Checks: EDCA Overview/Implementation/Code Checks/asce-checks.md
+      - Testing: EDCA Overview/Implementation/Testing/testing.md
     - Outputs:
-      - Overview: outputs/overview.md
-      - Output files: output-files.md
-      - Visualizations: visualizations.md
+      - Overview: EDCA Overview/Outputs/overview.md
+      - Output files: EDCA Overview/Outputs/output-files.md
+      - Visualizations: EDCA Overview/Outputs/visualizations.md
   - Getting Started:
-    - Quick start: getting-started/index.md
-    - Installation: installation.md
+    - Quick start: Getting Started/index.md
+    - Installation: Getting Started/installation.md
   - Workflow:
-    - Running EDCA: operating-edca.md
-    - Validating EDCA: validating-edca.md
-    - Examples: examples/index.md
-  - Other information:
-    - FAQ: faq.md
-    - Challenges: challenges.md
-    - Glossary: glossary.md
-    - References: references.md
-    - Acknowledgements: acknowledgements.md
-  - Developer guide: developer-guide/index.md
+    - Running EDCA: Workflow/operating-edca.md
+    - Validating EDCA: Workflow/validating-edca.md
+    - Examples: Workflow/examples/index.md
+  - Other Information:
+    - FAQ: Other Information/faq.md
+    - Challenges: Other Information/challenges.md
+    - Glossary: Other Information/glossary.md
+    - References: Other Information/references.md
+    - Acknowledgements: Other Information/acknowledgements.md
+  - Developer Guide: Developer Guide/index.md
 
 
 theme:
